# prompt-optimizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.yml  final_prompt.txt  mentor_prompts.txt  pyproject.toml
resources/: test_data.json  test_mapping.json  test_pii.json
resources/pii/: pii_class_counts.json  summary.json
resources/sample_result/: final_prompt_mapping.txt  mentor_prompts_mapping.txt  mentor_prompts_pii.txt
src/prompt_optimizer/: __init__.py  __main__.py
src/prompt_optimizer/api/: __init__.py  agent.py  client.py  mentor.py
src/prompt_optimizer/config/: __init__.py  settings.py
src/prompt_optimizer/core/: __init__.py  evaluator.py  optimizer.py
src/prompt_optimizer/data/: __init__.py  loader.py
src/prompt_optimizer/models/: __init__.py  agent_model.py  schemas.py
src/prompt_optimizer/utils/: __init__.py  logging.py  metrics.py  persistence.py  schema.py
tests/: __init__.py  conftest.py
tests/e2e/: test_pii_extraction.py
tests/integration/: test_optimizer.py
tests/unit/: test_api.py  test_config.py  test_data_loader.py  test_evaluator.py  test_metrics.py  test_models.py  test_persistence.py  test_schema.py
